src/style.scss
// https://github.com/nat-davydova/fancy-navigation-block

// _________ MIXINS ___________

@mixin transition-mix(
  $property: all,
  $duration: 0.2s,
  $timing: linear,
  $delay: 0s
) {
  transition-property: $property;
  transition-duration: $duration;
  transition-timing-function: $timing;
  transition-delay: $delay;
}

@mixin position-absolute($top: null, $left: null, $right: null, $bottom: null) {
  position: absolute;
  top: $top;
  left: $left;
  right: $right;
  bottom: $bottom;
}

// _________ VARIABLES ___________
$__white: #fff;
$__slate-grey: #304949;
$__dark-grey: #393838;
$__saddle-brown: #954722;
$__magenta-pink: #ca4985;
$__moss-green: #5c7450;

$font-color--default: $__dark-grey;
$font-color--light: $__white;

$border-color--light: $__white;

$bg-color--light: $__white;
$bg-color--accent1: $__slate-grey;
$bg-color--accent2: $__saddle-brown;
$bg-color--accent3: $__magenta-pink;
$bg-color--accent4: $__moss-green;

// _________ STYLES ___________
.fancy-nav {
  position: relative;
  width: 100%;
  height: 100vh;
  font-family: "Roboto", sans-serif;
  color: $font-color--default;
  overflow: hidden;

  &:after {
    @include position-absolute($top: 0, $left: 0);
    display: block;
    width: 100%;
    height: 100%;
    content: "";
    background-color: rgba(0, 0, 0, 0.55);
    z-index: 1;
  }
}

.fancy-nav__imgs {
  @include position-absolute($left: 0, $top: 0);
  width: 100%;
  height: 100%;
}

.fancy-nav__img {
  @include position-absolute($left: 0, $top: 0);
  @include transition-mix($property: opacity);
  width: 100%;
  height: 100%;

  &:not(:first-child) {
    opacity: 0;
  }

  img {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}

.fancy-nav__list {
  position: relative;
  display: flex;
  height: 100%;
  z-index: 2;
  flex-wrap: wrap;
}

.fancy-nav__item {
  position: relative;
  display: flex;
  width: 100%;
  height: 25%;
  flex-shrink: 0;
  align-items: flex-end;
  box-sizing: border-box;
  cursor: pointer;
  overflow: hidden;

  &:not(:last-child) {
    border-bottom: 2px solid $border-color--light;
  }
}

.fancy-nav__item-details {
  @include transition-mix();
  width: 100%;
  padding: 20px;
  box-sizing: border-box;
  transform: translateY(110px);
}

.fancy-nav__title,
.fancy-nav__tab-title {
  margin-top: 0;

  text-transform: uppercase;
  letter-spacing: 1.5px;

  line-height: 1.2em;
  font-size: 1rem;
}

.fancy-nav__title {
  color: $font-color--light;
}

.fancy-nav__description {
  color: $font-color--light;
  line-height: 1.5rem;
  display: -webkit-box;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-line-clamp: 1;
  line-clamp: 1;
  -webkit-box-orient: vertical;
  transform: translateY(20px);
  transform-origin: top center;

  & p {
    margin: 0;
  }
}

.fancy-nav__item:hover {
  .fancy-nav__item-details {
    transform: translateY(0);
  }

  &:nth-child(1) {
    .fancy-nav__item-details {
      background-color: $bg-color--accent1;
    }
  }

  &:nth-child(2) {
    .fancy-nav__item-details {
      background-color: $bg-color--accent2;
    }
  }

  &:nth-child(3) {
    .fancy-nav__item-details {
      background-color: $bg-color--accent3;
    }
  }

  &:nth-child(4) {
    .fancy-nav__item-details {
      background-color: $bg-color--accent4;
    }
  }

  .fancy-nav__description {
    @include transition-mix($property: transform, $delay: 0.1s);
    transform: translateY(0);
  }

  .fancy-nav__more-btn {
    @include transition-mix(
      $property: transform,
      $delay: 0.1s,
      $timing: linear
    );
    transform: translateY(0);
  }
}

.fancy-nav__tabs {
  @include position-absolute($top: 0, $left: 0);
  width: 100%;
  height: 100%;
  z-index: 4;
  opacity: 0;
  visibility: hidden;

  &.is-visible {
    opacity: 1;
    visibility: visible;
  }
}

.fancy-nav__tab {
  @include position-absolute($top: 0, $left: 0);
  width: 100%;
  height: 100%;
  padding: 15px;
  box-sizing: border-box;
  overflow-y: scroll;
  opacity: 0;
  visibility: hidden;

  &:nth-child(1) {
    background-color: $bg-color--accent1;
  }

  &:nth-child(2) {
    background-color: $bg-color--accent2;
  }

  &:nth-child(3) {
    background-color: $bg-color--accent3;
  }

  &:nth-child(4) {
    background-color: $bg-color--accent4;
  }

  &.is-visible {
    @include transition-mix();
    opacity: 1;
    visibility: visible;
  }
}

.fancy-nav__tab-container {
  width: 100%;
  max-width: 1220px;
  margin: auto;
}

.fancy-nav__tab-img {
  position: relative;
  height: 250px;

  &:after {
    @include position-absolute($top: 0, $left: 0);
    display: block;
    width: 100%;
    height: 100%;
    content: "";
    background-color: rgba(0, 0, 0, 0.35);
    z-index: 1;
  }

  img {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}

.fancy-nav__tab-description {
  position: relative;
  padding: 15px;
  margin: auto;
  background-color: $bg-color--light;
  box-sizing: border-box;
  z-index: 6;
}

.fancy-nav__tab-content {
  line-height: 1.5rem;
}

.fancy-nav__close-btn {
  position: relative;
  display: flex;
  margin-left: auto;
  width: 20px;
  height: 20px;
  margin-bottom: 15px;
  padding: 0;
  text-indent: -9999px;
  background-color: transparent;
  border: none;
  overflow: hidden;
  cursor: pointer;

  &:before,
  &:after {
    @include position-absolute($top: 0);
    display: block;
    width: 123%;
    height: 3px;
    content: "";
    background-color: $bg-color--light;
    border-radius: 5px;
  }

  &:before {
    left: 2px;
    transform: rotate(45deg);
    transform-origin: top left;
  }

  &:after {
    right: 3px;
    transform: rotate(-45deg);
    transform-origin: top right;
  }
}

.fancy-nav__more-btn {
  position: relative;
  padding: 10px 25px;
  margin-top: 20px;
  transform: translateY(30px);
  font: {
    weight: 700;
    size: 1.1rem;
  }
  color: $font-color--light;
  border: 2px solid $border-color--light;
  background-color: transparent;
  box-sizing: border-box;
  cursor: pointer;

  &:after {
    @include position-absolute($top: 0, $left: 0);
    @include transition-mix();
    display: block;
    width: 100%;
    height: 100%;
    content: "";
    transform: translateZ(0) scaleY(0);
    transform-origin: bottom center;

    background-color: $bg-color--light;
    z-index: -1;
  }

  &:hover {
    color: $font-color--default;

    &:after {
      transform: translateZ(0) scaleY(1);
    }
  }
}

@media (min-width: 750px) {
  .fancy-nav__item {
    width: 50%;
    height: 50%;

    &:not(:nth-child(2n)) {
      border-right: 2px solid $border-color--light;
    }

    &:last-child,
    &:nth-last-child(-n + 2) {
      border-bottom: none;
    }
  }

  .fancy-nav__item-details {
    transform: translateY(145px);
  }

  .fancy-nav__title {
    line-height: 2rem;
    font-size: 1.17rem;
  }

  .fancy-nav__description {
    min-height: 48px;
    -webkit-line-clamp: 2;
    line-clamp: 2;
  }

  .fancy-nav__tab-description {
    width: 90%;
    padding: 25px;
    transform: translateY(-40px);

    &.is-visible {
      @include transition-mix($delay: 0.4s);
      transform: translateY(-80px);
      opacity: 1;
      visibility: visible;
    }
  }

  .fancy-nav__tab-img {
    height: 400px;
    transform: scale(0.7);
    opacity: 0;

    &.is-visible {
      @include transition-mix($delay: 0.2s);
      transform: scale(1);
      opacity: 1;
      visibility: visible;
    }
  }

  .fancy-nav__tab-title {
    font-size: 1.5rem;
  }

  .fancy-nav__tab {
    padding: 25px;
  }

  .fancy-nav__close-btn {
    width: 30px;
    height: 30px;
    margin-bottom: 25px;
    transform: translateY(-30px);
    opacity: 0;

    &:before,
    &:after {
      width: 130%;
      height: 5px;
    }

    &:before {
      left: 3px;
    }

    &.is-visible {
      @include transition-mix($delay: 0.2s);
      transform: translateY(0);
      opacity: 1;
      visibility: visible;
    }
  }
}

@media (min-width: 1400px) {
  .fancy-nav__item {
    width: 25%;
    height: 100%;

    &:not(:last-child) {
      border-right: 2px solid $border-color--light;
    }

    &:not(:nth-last-child(-n + 2)) {
      border-bottom: none;
    }
  }

  .fancy-nav__item-details {
    padding: 40px;
  }

  .fancy-nav__tab-title {
    font-size: 2rem;
  }

  .fancy-nav__tab {
    padding: 40px;
  }

  .fancy-nav__close-btn {
    margin-bottom: 40px;
  }

  .fancy-nav__tab-description {
    padding: 40px;
  }
}

